@@ -5,6 +5,7 @@ v1.5 - Pending
 	+ Retain selection in lists after removing items
 	+ Hidden config option to expand notebook tabs (tabs_expanded)
 	+ Bug: Fix artwork for artists/albums with "/" in them (e.g. AC/DC)
+	+ Bug: Fix egg trayicon with vertical system tray
 
 v1.4.2 - February 9, 2008
 	+ Add %D for disc tag in display formatting options
